# libColorConvert

./: .gitmodules  CMakeLists.txt  calibvis.cpp  calibvis.h  color-flow.cpp  colorconvert.cpp  colorconvert.h  colorflow.cpp  colorflow.h  image.cc  image.h  largest-circle.cpp  optimize-color-circle.cpp  plotcolorspace.cpp  plotcolorspace.h  testcolorconvert.cpp  testcolorflow.cpp
